--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,8 +10,10 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
-
+org.gradle.jvmargs=-Xmx8192m -XX:MaxMetaspaceSize=2048m
+# org.gradle.jvmargs=-Xmx2048m
+org.gradle.java.home=C:/Program Files/Java/jdk-17
+org.gradle.caching=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -38,4 +40,4 @@ newArchEnabled=false
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-hermesEnabled=true
+hermesEnabled=false
