--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.1.17",
+    "@types/styled-components-react-native": "^5.2.5",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-safe-area-context": "^4.10.4",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,10 +30,12 @@
     "@react-native/typescript-config": "0.74.84",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.34",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-cli": "^2.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
