--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
     "@types/styled-components-react-native": "^5.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.16.2",
-    "react-native-safe-area-context": "^4.10.4",
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
